NetBSD Problem Report #45268

From paul@whooppee.com  Thu Aug 18 16:02:52 2011
Return-Path: <paul@whooppee.com>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 5BF8263B89A
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 18 Aug 2011 16:02:52 +0000 (UTC)
Message-Id: <20110818160251.13FBB247845@screamer.whooppee.com>
Date: Thu, 18 Aug 2011 09:02:51 -0700 (PDT)
From: paul@whooppee.com
Reply-To: paul@whooppee.com
To: gnats-bugs@gnats.NetBSD.org
Subject: amdtemp(4) should attach to pchb rather than pci?
X-Send-Pr-Version: 3.95

>Number:         45268
>Category:       kern
>Synopsis:       amdtemp(4) should attach to pchb rather than pci?
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    cegger
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Aug 18 16:05:00 +0000 2011
>Closed-Date:    Mon Apr 16 16:08:10 +0000 2012
>Last-Modified:  Mon Apr 16 16:10:03 +0000 2012
>Originator:     Paul Goyette
>Release:        NetBSD 5.99.55
>Organization:
-------------------------------------------------------------------------
| Paul Goyette     | PGP Key fingerprint:     | E-mail addresses:       |
| Customer Service | FA29 0E3B 35AF E8AE 6651 | paul at whooppee.com    |
| Network Engineer | 0786 F758 55DE 53BA 7731 | pgoyette at juniper.net |
| Kernel Developer |                          | pgoyette at netbsd.org  |
-------------------------------------------------------------------------
>Environment:


System: NetBSD screamer.whooppee.com 5.99.55 NetBSD 5.99.55 (WHOOPPEE (shared) 2011-08-10 23:23:58) #4: Wed Aug 10 16:27:08 PDT 2011 paul@screamer.whooppee.com:/build/netbsd-local/obj/amd64/sys/arch/amd64/compile/WHOOPPEE amd64
Architecture: x86_64
Machine: amd64
>Description:
The amdtemp(4) device was recently modularized.  However, using it as
a module is really not very useful, since by default a "pchb*" device will
attach to the same "pci? dev ? function ?", precluding subsequent attach
of the amdtemp device.  (When this code is built-in to the kernel, the
amdtemp(4) match() returns a higher value than pchb(4).)

It was suggested in private Email (I forget who it was) that the amdtemp(4)
should really attach at pchb?, since there is at least one other device
(agp-related?) that shares the same pchb on certain processor models.

>How-To-Repeat:

>Fix:


>Release-Note:

>Audit-Trail:
From: "Jonathan A. Kollasch" <jakllsch@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45268 CVS commit: src
Date: Thu, 18 Aug 2011 20:55:21 +0000

 Module Name:	src
 Committed By:	jakllsch
 Date:		Thu Aug 18 20:55:21 UTC 2011

 Modified Files:
 	src/share/man/man4: amdtemp.4
 	src/sys/arch/amd64/conf: GENERIC XEN3_DOM0
 	src/sys/arch/i386/conf: ALL GENERIC XEN3_DOM0
 	src/sys/arch/x86/pci: files.pci pchb.c

 Log Message:
 Attach amdtemp(4) at pchb(4) instead of in place of pchb(4).

 Should fix PR#45268.


 To generate a diff of this commit:
 cvs rdiff -u -r1.4 -r1.5 src/share/man/man4/amdtemp.4
 cvs rdiff -u -r1.333 -r1.334 src/sys/arch/amd64/conf/GENERIC
 cvs rdiff -u -r1.70 -r1.71 src/sys/arch/amd64/conf/XEN3_DOM0
 cvs rdiff -u -r1.318 -r1.319 src/sys/arch/i386/conf/ALL
 cvs rdiff -u -r1.1047 -r1.1048 src/sys/arch/i386/conf/GENERIC
 cvs rdiff -u -r1.54 -r1.55 src/sys/arch/i386/conf/XEN3_DOM0
 cvs rdiff -u -r1.12 -r1.13 src/sys/arch/x86/pci/files.pci
 cvs rdiff -u -r1.26 -r1.27 src/sys/arch/x86/pci/pchb.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Jonathan A. Kollasch" <jakllsch@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45268 CVS commit: src/sys/arch/x86/pci
Date: Sat, 20 Aug 2011 20:01:09 +0000

 Module Name:	src
 Committed By:	jakllsch
 Date:		Sat Aug 20 20:01:09 UTC 2011

 Modified Files:
 	src/sys/arch/x86/pci: pchb.c pchbvar.h

 Log Message:
 Add rescan support for 'amdtempbus' to x86 pchb(4).
 Maybe finally fixes PR#45268.


 To generate a diff of this commit:
 cvs rdiff -u -r1.31 -r1.32 src/sys/arch/x86/pci/pchb.c
 cvs rdiff -u -r1.7 -r1.8 src/sys/arch/x86/pci/pchbvar.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 22 Aug 2011 02:40:48 +0000
State-Changed-Why:
pgoyette reported on current-users that it works now.


From: "Paul Goyette" <pgoyette@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45268 CVS commit: src/sys/arch/x86/pci
Date: Mon, 16 Apr 2012 04:57:42 +0000

 Module Name:	src
 Committed By:	pgoyette
 Date:		Mon Apr 16 04:57:42 UTC 2012

 Modified Files:
 	src/sys/arch/x86/pci: pchb.c pchbvar.h

 Log Message:
 Now that we have amdnb_misc for attaching amdtemp, revert pchb.c revisions
 1.27 and 1.32.  This will unbreak the build.

 XXX The amdtemp device currently does not seem to provide correct sensor
     values.

 XXX The amdnb_misc device does not currently have a rescan capability, so
     the amdtemp module will not instantiate any devices (PR kern/45268
     reappears).

 XXX The agp attachment at the same pci device and function (which was
     the motivation for attaching amdtemp at pchb) probably ought to also
     be moved to attach at amdnb_miscbus.


 To generate a diff of this commit:
 cvs rdiff -u -r1.33 -r1.34 src/sys/arch/x86/pci/pchb.c
 cvs rdiff -u -r1.8 -r1.9 src/sys/arch/x86/pci/pchbvar.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

Responsible-Changed-From-To: kern-bug-people->cegger
Responsible-Changed-By: pgoyette@NetBSD.org
Responsible-Changed-When: Mon, 16 Apr 2012 12:30:51 +0000
Responsible-Changed-Why:
cegger reintroduced the problem


State-Changed-From-To: closed->open
State-Changed-By: pgoyette@NetBSD.org
State-Changed-When: Mon, 16 Apr 2012 12:30:51 +0000
State-Changed-Why:
cegger reintroduced the problem


State-Changed-From-To: open->closed
State-Changed-By: cegger@NetBSD.org
State-Changed-When: Mon, 16 Apr 2012 16:08:10 +0000
State-Changed-Why:
Bug is fixed.


From: "Christoph Egger" <cegger@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45268 CVS commit: src/sys/arch/x86/pci
Date: Mon, 16 Apr 2012 16:07:24 +0000

 Module Name:	src
 Committed By:	cegger
 Date:		Mon Apr 16 16:07:24 UTC 2012

 Modified Files:
 	src/sys/arch/x86/pci: amdnb_misc.c

 Log Message:
 Add rescan support. Re-fixes PR 45268.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1 -r1.2 src/sys/arch/x86/pci/amdnb_misc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.