Attach amdtemp(4) at pchb(4) instead of in place of pchb(4).

Should fix PR#45268.